--- a/index.html
+++ b/index.html
@@ -40,25 +40,27 @@
                     </a>
                     <a href="tel:" class="small text-dark mr-4">
                         <i class="fa fa-phone mr-1">
-                            +265999360325 | +265887209531
+                            +265999360325
                         </i>
                     </a>
+                    <!----- Social Icons ---->
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/MtendereEducationConsult/" class="small mr-4" target="_blank">
+                            <i class="fa fa-facebook-square"></i>
+                        </a>
+                        <a href="https://twitter.com/MtendereEduCon" class="small mr-4" target="_blank">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com/mtendere_education_consult/" class="small mr-4" target="_blank">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/mtendere-education-consult/" class="small mr-4" target="_blank">
+                            <i class="fa fa-linkedin"></i>
+                        </a>
+                    </div>
 
-                    <a href="https://www.facebook.com/MtendereEducationConsult/" class="small mr-4" target="_blank">
-                        <i class="fab fa-facebook-square"></i>
-                    </a>
-                    <a href="https://twitter.com/MtendereEduCon" class="small mr-4" target="_blank">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="https://www.instagram.com/mtendere_education_consult/" class="small mr-4" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/company/mtendere-education-consult/" class="small mr-4" target="_blank">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-
-                    <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
-                        <i class="fa fa-envelope mr-1"></i> mtendereeduconsult@gmail.com
+                    <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark" style="margin-right: 0; display: inline-block; align-items: right;">
+                        <i class="fa fa-envelope mr-1"></i>mtendereeduconsult@gmail.com
                     </a>
                 </div>
 
