--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="row justify-content-between">
 
                 <div class="col-md-8 d-flex">
-                    <a href="#faqModal" class="small mr-4" data-toggle="modal">
+                    <a href="#faqModal" class="small mr-4" data-bs-toggle="modal">
                         <i class="fa fa-question-circle mr-1"></i> Have a Question?
                     </a>
                     <a href="tel:" class="small text-dark mr-4">
@@ -96,6 +96,9 @@
                 <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
+        </div>
+        <div class="ml-auto">
+            <a href="#formModal" class="btn btn-primary" data-bs-toggle="modal">Enroll Now</a>
         </div>
     </nav>
 
@@ -180,12 +183,6 @@
                         Our team of experienced advisors is dedicated to providing personalized support, helping you
                         navigate the complexities of studying abroad. We offer a wide range of services, including
                         university application assistance, scholarship advisory, and visa support.
-                    </p>
-
-                    <p data-aos="fade-up" data-aos-delay="200">
-                        <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                            data-toggle="modal">Enroll now
-                        </a>
                     </p>
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
@@ -300,7 +297,16 @@
 
 
     <div class="container mt-5">
-        <h2 class="text-center mb-4" style="color: var(--primary-color);">Our Services</h2>
+        <div class="section-header text-center mb-5">
+            <h6 class="text-primary fw-bold">What We Do?</h6>
+            <h1 class="display-5">
+                <span class="text-primary">
+                    <i class="bi bi-book-fill"></i>
+                    Explore Our Services
+                </span>
+            </h1>
+            <p>At Mtendere Education Consult, we offer a wide range of services to help students achieve their educational goals.</p>
+        </div>
         <div class="row">
             <div class="col-md-4 service-card">
                 <div class="service-inner">
@@ -454,8 +460,7 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Popular Scholarship</h6>
                 <h1 class="display-5"><span class="text-primary">
-                        <span>
-                            Our Top Scholarships
+                        Our Top Scholarships
                         </span>
                 </h1>
                 <p class="lead">
@@ -480,7 +485,7 @@
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
                                 <div><span class="price text-success">From $1,200/year</span></div>
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-toggle="modal">Enroll now
+                                        data-bs-toggle="modal">Enroll now
                                     </a></div>
                             </div>
                         </div>
@@ -504,7 +509,7 @@
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
                                 <div><span class="price text-success">From $980/year</span></div>
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-toggle="modal">Enroll now
+                                        data-bs-toggle="modal">Enroll now
                                     </a></div>
                             </div>
                         </div>
@@ -528,7 +533,7 @@
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
                                 <div><span class="price text-success">From $1,500/year</span></div>
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-toggle="modal">Enroll now
+                                        data-bs-toggle="modal">Enroll now
                                     </a></div>
                             </div>
                         </div>
@@ -552,7 +557,7 @@
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
                                 <div><span class="price text-success">From $1,200/year</span></div>
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-toggle="modal">Enroll now
+                                        data-bs-toggle="modal">Enroll now
                                     </a>
                                 </div>
                             </div>
@@ -571,8 +576,7 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Why Choose Us?</h6>
                 <h1 class="display-5"><span class="text-primary">
-                        <span>
-                            Why Choose Mtendere Education Consult?
+                        Why Choose Mtendere Education Consult?
                         </span>
                 </h1>
                 <p class="lead">
@@ -705,7 +709,7 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Success Story's</h6>
                 <h1 class="display-5"><span class="text-primary">
-                    <span>Inspiring Journeys of Our Students</span>
+                    Inspiring Journeys of Our Students</span>
                 </h1>
                 <p class="lead">
                     Transforming Lives Through Education
@@ -1220,7 +1224,7 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Testimonial</h6>
                 <h1 class="display-5"><span class="text-primary">
-                        <span>What Our Students Say?</span></h1>
+                        What Our Students Say?</span>
                 </h1>
                 <p class="lead">
                     <span>Our students have come to rely on us for their international education needs.</span>
@@ -1311,9 +1315,9 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Latest Blogs</h6>
                 <h1 class="display-5"><span class="text-primary">
-                        <span>
+                        
                             Stay Updated with Our Latest Insights
-                        </span></h1>
+                        </span>
                 </h1>
                 <p class="lead">
                     Our blog section features articles, news, and updates related to international studies and Mtendere.
@@ -1564,9 +1568,6 @@
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/custom.ts"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-
-
     <script src="assets/js/core/aosInit.js"></script>
     <script src="assets/js/core/index.js"></script>
     <script src="assets/js/core/jarallaxInit.js"></script>
@@ -1598,143 +1599,6 @@
 
     <!-- AOS Script -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    
-    <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
-    <div class="modal fade" id="story1" tabindex="-1" aria-labelledby="story1Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story1Label">Janet's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Janet, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh
-                    University.
-                    Her journey is a testament to the power of education and the support of Mtendere Education
-                    Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copy similar modal structures for Trust, Edna, Ian, Mirabel, Lexina -->
-    <div class="modal fade" id="story2" tabindex="-1" aria-labelledby="story2Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story2Label">Trust's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Trust, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh
-                    University.
-                    Her journey is a testament to the power of education and the support of Mtendere Education
-                    Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copy similar modal structures for Edna, Ian, Mirabel, Lexina -->
-    <div class="modal fade" id="story3" tabindex="-1" aria-labelledby="story3Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story3Label">Edna's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Edna, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh
-                    University.
-                    Her journey is a testament to the power of education and the support of Mtendere Education
-                    Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copy similar modal structures for Ian, Mirabel, Lexina -->
-    <div class="modal fade" id="story4" tabindex="-1" aria-labelledby="story4Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story4Label">Ian's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Ian, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh University.
-                    Her journey is a testament to the power of education and the support of Mtendere Education
-                    Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copy similar modal structures for Mirabel, Lexina -->
-    <div class="modal fade" id="story5" tabindex="-1" aria-labelledby="story5Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story5Label">Mirabel's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Mirabel, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh
-                    University. Her journey is a testament to the power of education and the support of Mtendere
-                    Education Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copy similar modal structures for Lexina -->
-    <div class="modal fade" id="story6" tabindex="-1" aria-labelledby="story6Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story6Label">Lexina's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Lexina, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh
-                    University. Her journey is a testament to the power of education and the support of Mtendere
-                    Education Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </body>
 
