--- a/index.html
+++ b/index.html
@@ -16,48 +16,48 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-</head>
+</head> 
 
 <body>
     <!-- Top Bar -->
-    <div class="top-bar py-2 bg-light"></div>
-    <div class="container">
-        <div class="row justify-content-between">
-            <div class="col-md-8 d-flex">
-                <a href="#faqModal" class="small me-4" data-bs-toggle="modal">
-                    <i class="fa fa-question-circle me-1"></i> Have a Question?
-                </a>
-                <a href="tel:+265999360325" class="small text-dark me-4">
-                    <i class="fa fa-phone me-1"></i> +265999360325
-                </a>
-                <div class="social-icons">
-                    <a href="https://www.facebook.com/MtendereEducationConsult/" class="small me-4" target="_blank">
-                        <i class="fa fa-facebook-square"></i>
+    <div class="top-bar py-2 bg-light">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-md-8 d-flex">
+                    <a href="#faqModal" class="small me-4" data-bs-toggle="modal">
+                        <i class="fa fa-question-circle me-1"></i> Have a Question?
                     </a>
-                    <a href="https://twitter.com/MtendereEduCon" class="small me-4" target="_blank">
-                        <i class="fa fa-twitter"></i>
+                    <a href="tel:+265999360325" class="small text-dark me-4">
+                        <i class="fa fa-phone me-1"></i> +265999360325
                     </a>
-                    <a href="https://www.instagram.com/mtendere_education_consult/" class="small me-4" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/company/mtendere-education-consult/" class="small me-4"
-                        target="_blank">
-                        <i class="fa fa-linkedin"></i>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/MtendereEducationConsult/" class="small me-4" target="_blank">
+                            <i class="fa fa-facebook-square"></i>
+                        </a>
+                        <a href="https://twitter.com/MtendereEduCon" class="small me-4" target="_blank">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com/mtendere_education_consult/" class="small me-4" target="_blank">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/mtendere-education-consult/" class="small me-4"
+                            target="_blank">
+                            <i class="fa fa-linkedin"></i>
+                        </a>
+                    </div>
+                    <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
+                        <i class="fa fa-envelope me-1"></i> mtendereeduconsult@gmail.com
                     </a>
                 </div>
-                <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
-                    <i class="fa fa-envelope me-1"></i> mtendereeduconsult@gmail.com
-                </a>
-            </div>
-            <div class="col-md-4 d-flex justify-content-end align-items-center">
-                <select class="form-select form-select-sm me-3" id="language-select">
-                    <option value="en">English</option>
-                    <option value="es">Español</option>
-                    <option value="fr">Français</option>
-                </select>
+                <div class="col-md-4 d-flex justify-content-end align-items-center">
+                    <select class="form-select form-select-sm me-3" id="language-select">
+                        <option value="en">English</option>
+                        <option value="es">Español</option>
+                        <option value="fr">Français</option>
+                    </select>
+                </div>
             </div>
         </div>
-    </div>
     </div>
     <!-- End Top Bar -->
 
@@ -153,7 +153,7 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">About Us</h6>
                 <h1 class="display-5"><span class="text-primary">
-                        <span>Learn More About us</span></h1>
+                        Learn More About us</span>
                 </h1>
                 <p class="lead">
                     Mtendere is committed to providing the best possible education and opportunities for its students.
