--- a/index.html
+++ b/index.html
@@ -50,13 +50,6 @@
                         <i class="fa fa-envelope me-1"></i> mtendereeduconsult@gmail.com
                     </a>
                 </div>
-                <div class="col-md-4 d-flex justify-content-end align-items-center">
-                    <select class="form-select form-select-sm me-3" id="language-select">
-                        <option value="en">English</option>
-                        <option value="es">Español</option>
-                        <option value="fr">Français</option>
-                    </select>
-                </div>
             </div>
         </div>
     </div>
@@ -65,7 +58,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="assets/imgs/Mtendere_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="assets/imgs/Mtendere_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="Mtendere Logo">
             Mtendere Education Consult
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
