--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
@@ -1496,10 +1496,10 @@
                     <p><i class="fa fa-phone-alt mr-2"></i> + 265 999 360 325 / 265 887 209 531</p>
                     <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
-                        <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                        <a class="text-white mr-4" href="https://x.com/MtendereConsult"><i class="fab fa-2x fa-twitter"></i></a>
+                        <a class="text-white mr-4" href="https://web.facebook.com/profile.php?id=61552257338090"><i class="fab fa-2x fa-facebook-f"></i></a>
+                        <a class="text-white mr-4" href="linkedin.com/in/mtendere-education-consult-1b44a9345"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                        <a class="text-white" href="https://www.instagram.com/mecmw265/"><i class="fab fa-2x fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-4">
@@ -1507,27 +1507,27 @@
                         <h5 class="fw-bold">Gallery</h5>
                         <ul class="instafeed instagram-gallery list-unstyled">
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                                    data-fancybox="gal"><img src="assets/imgs/students/Caroline.jpg" alt="team"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                                    data-fancybox="gal"><img src="assets/imgs/Services/IMG-20230311-WA0117.jpg" alt="admission"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt="application"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                                    data-fancybox="gal"><img src="assets/imgs/Events-3.jpg" alt="departure"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0138.jpg" alt="Scholarships"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt=""
+                                    data-fancybox="gal"><img src="assets/imgs/Event-1.jpg" alt="Branding"
                                         width="72" height="72"></a>
                             </li>
                         </ul>
@@ -1552,8 +1552,7 @@
                     <h5 class="fw-bold">News & Updates</h5>
                     <ul class="list-unstyled">
                         <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
-                        <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
-                        </li>
+                        <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a></li>
                         <li><a href="blog.html" class="text-white">Blog: Tips on Applying to Top Universities</a></li>
                     </ul>
                 </div>
@@ -1562,8 +1561,7 @@
                     <h5 class="text-white mb-4">Quick Links</h5>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
-                            Condition</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms & Condition</a>
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
                         <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
@@ -1587,10 +1585,8 @@
     <!-- Back to Top Button -->
     <button id="backToTop" title="Back to top">↑</button>
 
-    <!-- Footer End -->
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
