--- a/index.html
+++ b/index.html
@@ -1511,11 +1511,11 @@
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/Services/IMG-20230311-WA0117.jpg" alt="admission"
+                                    data-fancybox="gal"><img src="assets/imgs/ChandigarhUniverstiy.png" alt="admission"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
-                                    data-fancybox="gal"><img src="assets/imgs/International studies.jpg" alt="application"
+                                    data-fancybox="gal"><img src="assets/imgs/Internationalstudies.jpg" alt="application"
                                         width="72" height="72"></a>
                             </li>
                             <li><a class="instagram-item" href="assets/imgs/International studies.jpg"
