--- a/index.html
+++ b/index.html
@@ -32,20 +32,10 @@
                         <i class="fa fa-phone me-1"></i> +265999360325
                     </a>
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/MtendereEducationConsult/" class="small me-4" target="_blank">
-                            <i class="fa fa-facebook-square"></i>
-                        </a>
-                        <a href="https://twitter.com/MtendereEduCon" class="small me-4" target="_blank">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                        <a href="https://www.instagram.com/mtendere_education_consult/" class="small me-4"
-                            target="_blank">
-                            <i class="fa fa-instagram"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/company/mtendere-education-consult/" class="small me-4"
-                            target="_blank">
-                            <i class="fa fa-linkedin"></i>
-                        </a>
+                        <a class="text-white mr-4" href="https://x.com/MtendereConsult"><i class="fab fa-2x fa-twitter"></i></a>
+                        <a class="text-white mr-4" href="https://web.facebook.com/profile.php?id=61552257338090"><i class="fab fa-2x fa-facebook-f"></i></a>
+                        <a class="text-white mr-4" href="linkedin.com/in/mtendere-education-consult-1b44a9345"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                        <a class="text-white" href="https://www.instagram.com/mecmw265/"><i class="fab fa-2x fa-instagram"></i></a>
                     </div>
                     <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
                         <i class="fa fa-envelope me-1"></i> mtendereeduconsult@gmail.com
@@ -1243,7 +1233,7 @@
         </div>
     </div>
 
-    <div class="untree_co-section bg-light py-12">
+    <div class="testimonial-section" id="testimonial">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Testimonial</h6>
@@ -1338,7 +1328,7 @@
     </div>
 
     <!-- Blog Section Start -->
-    <div class="untree_co-section bg-light py-12">
+    <div class="blog-section bg-light py-12">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Latest Blogs</h6>
@@ -1357,7 +1347,7 @@
                         <!-- Blog Post 1 -->
                         <div class="carousel-item">
                             <div class="blog-post">
-                                <img src="assets/imgs/2020mBatch Departure day.jpg" alt="Blog Post 1" class="img-fluid">
+                                <img src="" alt="Blog Post 1" class="img-fluid">
                                 <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a>
                                 </h4>
                                 <p>Learn the best strategies to secure scholarships for your international studies.</p>
@@ -1493,8 +1483,8 @@
                         1st Floor Room 1,<br>
                         Lilongwe<br>
                     </p>
-                    <p><i class="fa fa-phone-alt mr-2"></i> + 265 999 360 325 / 265 887 209 531</p>
-                    <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i> +265999360325 | 0887209531</p>
+                    <p><i class="fa fa-envelope mr-2"></i>  mtendereeduconsult@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="text-white mr-4" href="https://x.com/MtendereConsult"><i class="fab fa-2x fa-twitter"></i></a>
                         <a class="text-white mr-4" href="https://web.facebook.com/profile.php?id=61552257338090"><i class="fab fa-2x fa-facebook-f"></i></a>
