--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Top Bar -->
-    <div class="top-bar py-2 bg-light">
+    <div class="top-bar py-2">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-8 d-flex">
@@ -47,7 +47,7 @@
     <!-- End Top Bar -->
 
     <!-- Navigation Bar -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
             <img src="assets/imgs/Mtendere_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="Mtendere Logo">
             Mtendere Education Consult
@@ -86,7 +86,7 @@
     <!-- Hero Section -->
     <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
@@ -155,7 +155,7 @@
     </div>
 
     <!-- Our about Section -->
-    <div class="untree_co-section">
+    <div class="about-section">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">About Us</h6>
@@ -340,7 +340,7 @@
         </div>
     </div>
 
-    <div class="untree_co-section">
+    <div class="category">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Top Category</h6>
@@ -451,7 +451,7 @@
         </div>
     </div>
 
-    <div class="untree_co-section bg-light">
+    <div class="scholarship">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Popular Scholarship</h6>
@@ -567,7 +567,7 @@
         </div>
     </div>
 
-    <div class="untree_co-section">
+    <div class="why-choose">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Why Choose Us?</h6>
@@ -1328,7 +1328,7 @@
     </div>
 
     <!-- Blog Section Start -->
-    <div class="blog-section bg-light py-12">
+    <div class="blog-section py-12">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Latest Blogs</h6>
