--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 educational goals.</p>
         </div>
         <div class="row">
-            <div class="col-md-4 service-card">
+            <div class="col-md-4 service-card" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-inner">
                     <div class="service-front">
                         <h5>University Application</h5>
@@ -467,7 +467,7 @@
                 <!-- Program 1 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
                     <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/courses/IMG-20230620-WA0436.jpg" alt="Medical Program"
+                        <a href="#"><img src="assets/imgs/friendly-afro-american-doctor-holding-clipboard-smiling-camera-isolated-gray-background.jpg" alt="Medical Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
@@ -491,7 +491,7 @@
                 <!-- Program 2 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
                     <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/courses/IMG-20230509-WA0117.jpg" alt="Engineering Program"
+                        <a href="#"><img src="assets/imgs/businessman-with-chart.jpg" alt="Engineering Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
@@ -515,7 +515,7 @@
                 <!-- Program 3 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
                     <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/courses/IMG-20230509-WA0117.jpg" alt="Business Program"
+                        <a href="#"><img src="assets/imgs/corporate-employees-review-transactional-info-improve-customer-satisfaction.jpg" alt="Business Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
@@ -539,7 +539,7 @@
                 <!-- Program 4 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
                     <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/courses/IMG-20230509-WA0117.jpg" alt="IT Program"
+                        <a href="#"><img src="assets/imgs/people-repairing-computer-chips.jpg" alt="IT Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
@@ -567,7 +567,7 @@
         </div>
     </div>
 
-    <div class="why-choose">
+    <div class="why-choose sticky-section" style="background-image: url('assets/imgs/Background/mtendere.jpg');">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Why Choose Us?</h6>
