--- a/index.html
+++ b/index.html
@@ -1568,7 +1568,7 @@
     <!-- Footer End -->
 
     <!-- Floating WhatsApp Chat Button -->
-    <a href="https://wa.me/999360325" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/999360325" class="whatsapp-float" target="_blank" style="@keyframes bounce {0%, 100% {transform: translateY(0);}50% {transform: translateY(-10px);}}">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
     </a>
 
