--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- End Top Bar -->
 
     <!-- Navigation Bar -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
+    <nav class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand" href="#">
             <img src="assets/imgs/Mtendere_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="Mtendere Logo">
             Mtendere Education Consult
