--- a/index.html
+++ b/index.html
@@ -186,12 +186,41 @@
                         <img src="assets/imgs/about us 2.jpg" alt="Image" class="img-fluid rounded">
                     </a>
                 </div>
+            </div>
+        </div>
+    </div>
 
-                <div class="d-flex mb-3" data-aos="fade-up" data-aos-delay="200">
+    <!---- Vision & Commitment----->
+    <div class="vision-commitment-section">
+        <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Our Vision & Commitment</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        Our Vision & Commitment</span>
+                </h1>
+                <p class="lead">
+                    To provide the best possible education and opportunities for our students, we strive to:
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 mb-5">
+                    <h4 class="text-primary">Vision</h4>
+                    <p>
+                        To create a world where students from all walks of life can achieve their dreams of success and
+                        personal fulfillment.
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <h4 class="text-primary">Commitment</h4>
+                    <p>
+                        To provide a safe, supportive, and inclusive environment for students to explore their passions,
+                        pursue their dreams, and build their careers.
+                    </p>
+                </div>
+            </div>
+            <div class="d-flex mb-3" data-aos="fade-up" data-aos-delay="200">
                     <div class="col-lg-6" data-aos="fade-left">
                         <div class="ps-lg-4">
-                            <h3 class="mb-3">Our Vision & Commitment</h3>
-                            <p>At Mtendere Education Consult, we understand the life-changing power of education.</p>
                             <ul class="list-unstyled mt-4">
                                 <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Strong
                                     partnerships with top global universities and colleges</li>
@@ -204,13 +233,12 @@
                             </ul>
                             <p class="mt-4">We prioritize our students' goals and challenges, especially those faced
                                 by international applicants.</p>
-                            <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
-                    <div class="btn-icon bg-primary">
+                <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px;">
+                    <div class="btn-icon bg-primary" style="box-sizing: border-box; border-radius: 5px; ">
                         <i class="fa fa-graduation-cap text-white"></i>
                     </div>
                     <div>
@@ -225,7 +253,7 @@
                     </div>
                 </div>
                 <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
-                    <div class="btn-icon bg-secondary">
+                    <div class="btn-icon bg-secondary" style="box-sizing: border-box; border-radius: 5px;">
                         <i class="fa fa-certificate text-white"></i>
                     </div>
                     <div>
@@ -240,7 +268,7 @@
                     </div>
                 </div>
                 <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
-                    <div class="btn-icon bg-warning">
+                    <div class="btn-icon bg-warning" style="box-sizing: border-box; border-radius: 5px;">
                         <i class="fa fa-book-reader text-white"></i>
                     </div>
                     <div>
@@ -252,6 +280,18 @@
                             vocational
                             courses, we have something for everyone.</p>
                         </p>
+                    </div>
+                </div>
+                <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
+                    <div class="btn-icon bg-info" style="box-sizing: border-box; border-radius: 5px;">
+                        <i class="fa fa-handshake text-white"></i>
+                    </div>
+                    <div>
+                        <h4>Student Support</h4>
+                        <p class="m-0">
+                            We provide a supportive and inclusive environment for students to explore their passions,
+                            pursue their dreams, and build their careers. We also help students develop their confidence,
+                            skills, and values.</p>
                     </div>
                 </div>
             </div>
